crates/nash-report/tests/parse/snapshots/parse__type___error_empty_type_variable.snap
---
source: crates/nash-report/tests/parse/type_.rs
assertion_line: 35
description: "Code:\n\n'"
info: diagnostic
---
nash::syntax

  × Expected a type in the annotation for `value`.
   ╭─[src/Main.nash:1:1]
 1 │ '
   · ─
   ╰────
  help: Write a type name or a quoted type variable, such as `'a`.
