crates/nash-report/tests/parse/snapshots/parse__type___error_record_extension.snap
---
source: crates/nash-report/tests/parse/type_.rs
assertion_line: 45
description: "Code:\n\n{ r | x : int }"
info: diagnostic
---
nash::syntax

  × Expected `:` after the field name.
   ╭─[src/Main.nash:1:5]
 1 │ { r | x : int }
   ·     ─
   ╰────
  help: Separate the field name and its type with `:`.
