crates/nash-report/tests/parse/snapshots/parse__type___inline_representation_annotation_reports_unknown_name.snap
---
source: crates/nash-report/tests/parse/type_.rs
assertion_line: 30
description: "Code:\n\nlist ('a : Wrong)"
info: diagnostic
---
nash::syntax

  × Unknown representation bound `Wrong`.
   ╭─[src/Main.nash:1:12]
 1 │ list ('a : Wrong)
   ·            ─
   ╰────
  help: Use `Big`, `Const`, `Term`, or `Storable`.
