crates/nash-report/tests/parse/snapshots/parse__type___representation_annotation_rejects_arrow.snap
---
source: crates/nash-report/tests/parse/type_.rs
assertion_line: 25
description: "Code:\n\n('f : Big -> Big)"
info: diagnostic
---
nash::syntax

  × Representation bounds cannot contain arrows.
   ╭─[src/Main.nash:1:11]
 1 │ ('f : Big -> Big)
   ·           ─
   ╰────
  help: Use a bound such as `Storable`; constructor kinds are inferred.
