crates/nash-report/tests/parse/snapshots/parse__type___scheme_error_constraint_without_argument.snap
---
source: crates/nash-report/tests/parse/type_.rs
assertion_line: 10
description: "Code:\n\nEq => 'a"
info: diagnostic
---
nash::syntax

  × Invalid type constraint.
   ╭─[src/Main.nash:1:1]
 1 │ Eq => 'a
   · ─
   ╰────
  help: Write `Trait args => type`; enclose multiple constraints in parentheses,
        separated by commas.
