crates/nash-report/tests/parse/snapshots/parse__type___scheme_error_little_class.snap
---
source: crates/nash-report/tests/parse/type_.rs
assertion_line: 20
description: "Code:\n\nint 'a => 'a"
info: diagnostic
---
nash::syntax

  × Invalid type constraint.
   ╭─[src/Main.nash:1:1]
 1 │ int 'a => 'a
   · ─
   ╰────
  help: Write `Trait args => type`; enclose multiple constraints in parentheses,
        separated by commas.
