crates/nash-report/tests/parse/snapshots/parse__type___scheme_error_tuple_member.snap
---
source: crates/nash-report/tests/parse/type_.rs
assertion_line: 15
description: "Code:\n\n(Eq 'a, 'b) => 'a"
info: diagnostic
---
nash::syntax

  × Invalid type constraint.
   ╭─[src/Main.nash:1:1]
 1 │ (Eq 'a, 'b) => 'a
   · ─
   ╰────
  help: Write `Trait args => type`; enclose multiple constraints in parentheses,
        separated by commas.
