crates/nash-report/tests/parse/snapshots/parse__type___scheme_error_variable_context.snap
---
source: crates/nash-report/tests/parse/type_.rs
assertion_line: 5
description: "Code:\n\n'a => 'a"
info: diagnostic
---
nash::syntax

  × Invalid type constraint.
   ╭─[src/Main.nash:1:1]
 1 │ 'a => 'a
   · ─
   ╰────
  help: Write `Trait args => type`; enclose multiple constraints in parentheses,
        separated by commas.
